crates/reinhardt-pages/tests/ui/style/fail/static_mut.rs
use reinhardt_pages::{style_def};

#[style_def]
static mut STYLES: CardStyles = style! {
	.card {
		color: red;
	}
};

fn main() {}
